syntax = "proto3";

package rentalmgmt;

option go_package = "rental_easy.in/m/rentalmgmt";

service Rental_Easy_Functionalities {
    rpc CreateUser(NewUser) returns (UserId) {}
    rpc CreateItem(NewItem) returns (ItemId) {}
    rpc GetAllItems(Request) returns (Items) {}
    rpc GetItemById(ItemId) returns (Item) {}
    rpc UpdateItem(Item) returns (ItemId) {}
    rpc GetUserLeasedItems(UserId) returns (stream Item) {}
    rpc BookItem(Booking) returns (BookingId) {}
    rpc GetBookedItems(UserId) returns (stream BookedItems) {}
    rpc AddReview(NewReview) returns (ReviewId) {}
    rpc UpdateReview(Review) returns (ReviewId) {}
    rpc DeleteReview(ReviewId) returns (ReviewId) {}
    rpc GetAllReviews(ItemId) returns (stream Review) {}
}



//USER'S SIDE
//Create New User
message NewUser {
    string Name = 1;
    string Email = 2;
    string Phone_Number = 3;
    string Address = 4;
    string District = 5;
    string Postal_Code = 6;
    string Country = 7;
}

//Get the User Id
message UserId {
    int32 id = 1;
}

message Profile {
    int32 Id = 1;
    string Name = 2;
    string Email = 3;
    string Phone_Number = 4;
    string Address = 5;
    string District = 6;
    string Postal_Code = 7;
    string Country = 8;
}

message Booking {
    string StartDate = 1;
    string EndDate = 2;
    int32 UserId = 3;
    int32 ItemId = 4;
}

//ITEM'S SIDE
//Create New Item
message NewItem {
    string Name = 1;
    string Description = 2;
    string Category = 3;
    string Available_From = 4;
    string Available_To = 5;
    int32 Amount_per_day = 6;
    int32 UserID = 7;
}

//Get the Item Id
message ItemId {
    int32 id = 1;
}

//Get a Particular Item with all Details
message Item {
    int32 ID = 1;
    string Name = 2;
    string Description = 3;
    string Category = 4;
    string Available_From = 5;
    string Available_To = 6;
    int32 Amount_per_day = 7;
    int32 UserID = 8;
}


//To Show the Available Dates
message AvailableDates {
    string Available_From = 1;
    string Available_To = 2;
}

//For Listing all the Items
message Items {
    repeated Item items=1;
}


//REQUEST AND RESPONSE
//For Requesting
message Request {
    string request = 1;
}

//BOOKING RELATED

//To Conform Item is booked
message BookingId{
    int32 Id = 1;
}

//To Show the Booked Items
message BookedItems {
    int32 Id = 1;
    string ItemName = 2;
    string StartDate = 3;
    string EndDate = 4;
    int32 TotalAmount = 5;
}

//REVIEWS RELATED
message NewReview {
    string Comment = 1;
    int32 Rating = 2;
    int32 UserId = 3;
    int32 ItemId = 4;
}

message ReviewId{
    int32 Id = 1;
}

message Review {
    int32 Id = 1;
    string Comment = 2;
    int32 Rating = 3;
    int32 UserId = 4;
    int32 ItemId = 5;
}

